@@ -45,7 +45,7 @@
     <maven.war.plugin.version>2.6</maven.war.plugin.version>
     <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
     <maven.failsafe.plugin.version>2.18.1</maven.failsafe.plugin.version>
-    <mysql-connector-java.version>5.1.36</mysql-connector-java.version>
+    <mysql-connector-java.version>5.1.37</mysql-connector-java.version>
     <rome.version>1.5.0</rome.version>
     <jsr250-api.version>1.0</jsr250-api.version>
   </properties>
@@ -64,6 +64,7 @@
         <module>api</module>
         <module>core</module>
         <module>sql</module>
+        <module>sql-migration</module>
     </modules>
   <dependencyManagement>
     <dependencies>
@@ -354,6 +355,8 @@
         <artifactId>jsr250-api</artifactId>
         <version>${jsr250-api.version}</version>
       </dependency>
+
+
     </dependencies>
   </dependencyManagement>
     <build>
@@ -455,13 +458,15 @@
                   <!-- application path always starts with /-->
                   <path>/${project.artifactId}</path>
                   <!-- optional path to a context file -->
-                  <contextFile>context.xml</contextFile>
+                  <contextFile>context-dev.xml</contextFile>
                   <!-- optional system propoerties you want to add -->
                   <systemProperties>
                     <appserver.base>${project.build.directory}/appserver-base</appserver.base>
                     <appserver.home>${project.build.directory}/appserver-home</appserver.home>
                     <derby.system.home>${project.build.directory}/appserver-base/logs</derby.system.home>
                     <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+                    <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
+                    <env>dev</env>
                   </systemProperties>
                   <!-- if you want to use test dependencies rather than only runtime -->
                   <useTestClasspath>false</useTestClasspath>
